--- a/references.bib
+++ b/references.bib
@@ -33,7 +33,6 @@
   number =       5,
   volume =       55,
   pages =        {50--55},
-  url =          {https://doi.org/10.1145%2F2160718.2160733},
   doi =          {10.1145/2160718.2160733}
 }
 
@@ -49,7 +48,6 @@
   number =       2,
   volume =       30,
   pages =        {44--45},
-  url =          {https://doi.org/10.1080%2F08940886.2017.1289810},
   doi =          {10.1080/08940886.2017.1289810}
 }
 
@@ -105,6 +103,8 @@
                   Analysis of Vibronic Mode Coupling in Molecules},
   year =         1988,
   school =       {University of Wisconsin-Madison}
+  isbn =         {979-8-206-59885-8},
+  howpublished =          {https://www.proquest.com/docview/303711007},
 }
 
 @article{CohenJeremy2021a,
@@ -155,7 +155,9 @@
                   Femtosecond Time Regime with Applications to
                   Nanoscale Semiconductors},
   year =         2017,
-  school =       {University of Wisconsin-Madison}
+  school =       {University of Wisconsin-Madison},
+  isbn =         {978-0-355-54980-5},
+  howpublished = {https://www.proquest.com/docview/1985671488}
 }
 
 @article{Koerner_2019,
@@ -174,10 +176,12 @@
 
 @phdthesis{MeyerKentAlbert2004b,
   author =       {Meyer, Kent Albert},
-  title =        {Freqncy-Scanned Ultrafast Spectroscopic Techniques
+  title =        {Frequency-Scanned Ultrafast Spectroscopic Techniques
                   Applied to Infrared Four-Wave Mixing Spectroscopy},
   year =         2004,
-  school =       {University of Wisconsin--Madison}
+  school =       {University of Wisconsin--Madison},
+  isbn =         {978-0-496-01112-4},
+  howpublished = {https://www.proquest.com/docview/305111493}
 }
 
 @article{MukamelShaul2000a,
@@ -192,7 +196,6 @@
   number =       1,
   volume =       51,
   pages =        {691--729},
-  url =          {https://doi.org/10.1146/annurev.physchem.51.1.691},
   doi =          {10.1146/annurev.physchem.51.1.691}
 }
 
@@ -265,7 +268,8 @@
   title =        {yaq: Yet Another Acquisition A modular approach to
                   spectroscopy software and instrumentation},
   year =         2022,
-  school =       {University of Wisconsin--Madison}
+  school =       {University of Wisconsin--Madison},
+  doi =          {10.5281/zenodo.7627331}
 }
 
 @phdthesis{ThompsonBlaiseJonathan2018a,
@@ -274,7 +278,8 @@
                   Spectroscopy with Applications in Semiconductor
                   Photophysics},
   year =         2018,
-  school =       {University of Wisconsin--Madison}
+  school =       {University of Wisconsin--Madison},
+  doi =          {10.5281/zenodo.7627321}
 }
 
 @article{WeberSebastien2021a,
@@ -307,7 +312,7 @@
 @misc{jsonrpc,
   title =        {JSON-RPC 2.0 Specification},
   year =         2013,
-  url =          {https://www.jsonrpc.org/specification},
+  howpublished =          {https://www.jsonrpc.org/specification},
   note =         {Accessed: 2023-02-08}
 }
 
@@ -320,8 +325,8 @@
 
 @misc{msgpack,
   title =        {msgpack},
-  url =
-                  {https://github.com/msgpack/msgpack/blob/master/spec.md},
+  houwpublished =
+                  {\url{https://github.com/msgpack/msgpack/blob/master/spec.md}},
   note =         {ACcessed: 2023-02-08}
 }
 
@@ -419,7 +424,7 @@
   author =       {Tapping, Patrick},
   title =        {{TRSpectrometer} Documentation},
   year =         2021,
-  url =          {https://trspectrometer.readthedocs.io/en/latest/},
+  howpublished = {\url{https://trspectrometer.readthedocs.io/}},
   note =         {Accessed: 2022-10-02}
 }
 
