--- a/references.bib
+++ b/references.bib
@@ -414,6 +414,18 @@
   organization = {Thorlabs}
 }
 
+@misc{yak_shaving,
+  title =        {{yak shaving}},
+  howpublished = {\url{https://en.wiktionary.org/wiki/yak_shaving}},
+  note =         {Accessed: 2023-03-16}
+}
+
+@misc{CarlinVieri,
+  title =        {{Yak shaving}},
+  howpublished = {\url{https://web.archive.org/web/20210112174206/http://projects.csail.mit.edu/gsb/old-archive/gsb-archive/gsb2000-02-11.html}},
+  note =         {Accessed: 2023-03-16}
+}
+
 @misc{tokei,
   title =        {{Tokei}},
   howpublished = {\url{https://github.com/XAMPPRocky/tokei}},
