--- a/SI.tex
+++ b/SI.tex
@@ -199,7 +199,7 @@ data = []
 # begin heating
 temp.set_position(100)
 # take data until temp greater than 90 deg
-while temp.get_position <= 90:
+while temp.get_position() <= 90:
     sensor.measure()
     while sensor.busy():
         time.sleep(0.001)
@@ -208,6 +208,11 @@ while temp.get_position <= 90:
     reading["temperature"] = temp.get_position()
     reading.update(sensor.get_measured())
     data.append(reading)
+    # wait for next second
+    while time.time() - reading["timestamp"] < 1:
+        time.sleep(0.001)
+# stop heating
+temp.set_position(25)
 \end{codefragment}
 
 \clearpage
