--- a/references.bib
+++ b/references.bib
@@ -312,7 +312,7 @@
 @misc{jsonrpc,
   title =        {JSON-RPC 2.0 Specification},
   year =         2013,
-  howpublished =          {https://www.jsonrpc.org/specification},
+  howpublished =          {\url{https://www.jsonrpc.org/specification}},
   note =         {Accessed: 2023-02-08}
 }
 
@@ -325,9 +325,9 @@
 
 @misc{msgpack,
   title =        {msgpack},
-  houwpublished =
+  howpublished =
                   {\url{https://github.com/msgpack/msgpack/blob/master/spec.md}},
-  note =         {ACcessed: 2023-02-08}
+  note =         {Accessed: 2023-02-08}
 }
 
 @misc{nidaqmx,
@@ -341,8 +341,8 @@
 @misc{normative_types,
   title =        {EPICS Normative Types Specification},
   year =         2019,
-  url =
-                  {https://docs.epics-controls.org/en/latest/specs/Normative-Types-Specification.html/},
+  howpublished =
+                  {\url{https://docs.epics-controls.org/en/latest/specs/Normative-Types-Specification.html/}},
   note =         {Accessed: 2023-02-08}
 }
 
